libEasyFsi/EasyFsi.h

typedef int       int_l; //! integer type used to represent local grid item id.
typedef long long int_g; //! integer type used to represent global grid item id.
typedef struct Boundary            Boundary;
typedef struct Communicator        Communicator;
typedef struct Application         Application;
//! @brief The location of field.
enum FieldLocation
{
    NodeCentered = 0, //! data is stored on nodes 
    FaceCentered = 1, //! data is stored on faces
    CellCentered = 2  //! data is stored on cells
};
//! @brief The input/output type of field.
enum FieldIO
{
    IncomingDofs  = 0, //! field data will be treated as DOFs and received from other application.
    IncomingLoads = 1, //! field data will be treated as LOADs and received from other application.
    OutgoingDofs  = 2, //! field data will be treated as DOFs and sending to other application.
    OutgoingLoads = 3  //! field data will be treated as LOADs and sending to other application.
};
//! @brief Topology type of face on coupled boundary.
enum FaceTopo
{
    BAR2 = 0,//! 2-nodes linear element
    BAR3,    //! 3-nodes quadratic element
    TRI3,    //! 3-nodes linear triangle element
    TRI6,    //! 6-nodes quadratic triangle element
    QUAD4,   //! 4-node linear quadrilateral element
    QUAD8,   //! 8-node quadratic quadrilateral element
    POLYGON  //! general polygon element (node number > 4)
};
//! @brief function prototype used to read boundary field data from current application.
typedef void(__stdcall* get_boundary_field_function)(const Application* app, const Boundary* bd, const char* name, int ncomp, FieldLocation loc,       double* data, void* user_data);
//! @brief function prototype used to write boundary field data to current application.
typedef void(__stdcall* set_boundary_field_function)(const Application* app, const Boundary* bd, const char* name, int ncomp, FieldLocation loc, const double* data, void* user_data);
    
    //--------------------------------------------------------
    // interface of Boundary
    //--------------------------------------------------------

    Boundary* bd_new();
    void  bd_delete(Boundary** p_bd);
    void  bd_clear(Boundary* bd);
    void  bd_set_user_id(Boundary* bd, int id);
    int   bd_get_user_id(const Boundary* bd);
    void  bd_reserve(Boundary* bd, int_l max_node, int_l max_face, int_l max_face_nodes);
    int_l bd_add_node(Boundary* bd, double x, double y, double z, int_g unique_id);
    int_l bd_add_face(Boundary* bd, FaceTopo type, int nnodes, const int_l* fnodes);
    void  bd_set_face_centroid(Boundary* bd, int_l face, double cx, double cy, double cz);
    void  bd_set_face_area    (Boundary* bd, int_l face, double sx, double sy, double sz);
    void  bd_set_node_coords  (Boundary* bd, int_l node, double x, double y, double z);
    int_l bd_face_num(const Boundary* bd);
    int_l bd_node_num(const Boundary* bd);
    void  bd_compute_metrics(Boundary* bd, double basied_angle_deg = 5.0);
    const double* bd_face_normal  (const Boundary* bd, int_l face);
    double        bd_face_area    (const Boundary* bd, int_l face);
    const double* bd_face_centroid(const Boundary* bd, int_l face);
    const double* bd_node_coords  (const Boundary* bd, int_l node);
    int_g bd_node_l2g(const Boundary* bd, int_l node);
    int_l bd_node_g2l(const Boundary* bd, int_g node);
    //--------------------------------------------------------
    // interface of Communicator
    //--------------------------------------------------------

    Communicator* cm_socket_new(int as_master, int np, const char* master_ip, int master_port);
    Communicator* cm_mpi_new(int mpi_comm, int rank, int size);
    void cm_set_constant(Communicator* cm, const char* name, int value);
    void cm_set_pointer (Communicator* cm, const char* name, void* value);
    void cm_set_function(Communicator* cm, const char* name, void* value);
    void cm_delete(Communicator** p_cm);
    int  cm_rank(Communicator* cm);
    int  cm_size(Communicator* cm);
    //--------------------------------------------------------
    // interfaces of Application
    //--------------------------------------------------------

    //! @brief Create a new application object.
    //! @param name        The name of this application
    //! @param intra_comm  The intra-communicator, usually is MPICommunicator, null=not exists
    //! @param root        The root process used to run FSI, ignored if \intra_comm is null.
    //! @return  Return a pointer of application object.
    Application* app_new(const char* name, Communicator* intra_comm, int root);
    //! @brief Delete an application.
    //! @param p_app  A pointer of object pointer created by \app_new.
    void app_delete(Application** p_app);
    //! @brief Remove all boundaries, communicators and other data in the application.
    //! @param app The object pointer of application created by \app_new.
    void app_clear(Application* app);
    //! @brief Add a new boundary to the application.
    //! @param app  The object pointer of application created by \app_new.
    //! @return  Return a pointer of boundary object.
    Boundary* app_add_boundary(Application* app);
    //! @brief Register a field to the application.
    //! @param app       The object pointer of application created by \app_new.
    //! @param name      The name of the field.
    //! @param ncomp     The number of components of the field, should be positive.
    //! @param location  The data location of this field, see \FieldLocation.
    //! @param iotype    The input/output type of this field, see \FieldIO.
    //! @param units     The units of this field.
    void app_register_field(Application* app, const char* name, int ncomp, FieldLocation location, FieldIO iotype, const char* units);
    //! @brief Set field functions
    //! @param app The object pointer of application created by \app_new.
    //! @param getter    A function pointer used to read outgoing fields from this application.
    //! @param setter    A function pointer used to writ incoming fields to this application.
    void app_set_field_func(Application* app, get_boundary_field_function getter, set_boundary_field_function setter);
    //! @brief Start coupling between applications.
    //! @param app        The object pointer of application created by \app_new.
    //! @param inter_comm The inter-communicator, usually is socket communicator.
    //! @note This call will be blocking until finishing operations bellow:
    //!    1) assemble boundary
    //!    2) synchronize all fields information between applications
    //!    3) allocate fields
    //!    4) compute interpolation coefficients.
    void app_start_coupling(Application* app, Communicator* inter_comm);
    //! @brief Exchange fields between applications.
    //! @param app       The object pointer of application created by \app_new.
    //! @param time      Current physical time of this application.
    //! @param user_data User data will be transfer to \getter and \setter functions, can be null.
    void app_exchange_solu(Application* app, double time, void* user_data);
    //! @brief Stop coupling of all applications and disconnect from inter-communicator.
    //! @param app  The object pointer of application created by \app_new.
    void app_stop_coupling(Application* app);